alteracoes pequenas
